--- a/main/src/styles/footer.css
+++ b/main/src/styles/footer.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     padding: 9px;
-    height: 28px;
+    height: 48px;
     color:#0000008A;
     background-color: #f2f2f2;
     border-bottom: solid #dadce0 1px;
@@ -30,5 +30,5 @@
 }
 
 .footer-wrapper {
-    width: 100%;
+    height: fit-content;
 }
